[tool.poetry]
name = "zip-gaussian-process"
version = "0.1.0"
description = ""
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
gpytorch = "^1.14"
statsmodels = "^0.14.4"
ipython = "<9.1.0"
ipywidgets = "^8.1.6"
jupyter-core = "^5.7.2"
jupyterlab = "^4.4.0"
matplotlib = "^3.10.1"
torch = "^2.6.0"
pyro-ppl = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
